--- a/README
+++ b/README
@@ -1,36 +1,36 @@
-#My latest nethunter kalifs builds:
-Generic NetHunter armhf minimal with su
+#My latest nethunter kalifs builds (as of Oct 15, 2018):
+#Generic NetHunter armhf minimal with su
 https://www.androidfilehost.com/?fid=11410932744536983531
-Generic NetHunter armhf minimal without su
+#Generic NetHunter armhf minimal without su
 https://www.androidfilehost.com/?fid=11410932744536983530
-Generic NetHunter armhf full with su
+#Generic NetHunter armhf full with su
 https://www.androidfilehost.com/?fid=11410932744536983523
-Generic NetHunter armhf full without su
+#Generic NetHunter armhf full without su
 https://www.androidfilehost.com/?fid=11410932744536983520
 
-Generic NetHunter arm64 minimal with su
+#Generic NetHunter arm64 minimal with su
 https://www.androidfilehost.com/?fid=11410932744536983443
-Generic NetHunter arm64 minimal without su
+#Generic NetHunter arm64 minimal without su
 https://www.androidfilehost.com/?fid=11410932744536983444
-Generic NetHunter arm64 full with su
+#Generic NetHunter arm64 full with su
 https://www.androidfilehost.com/?fid=11410932744536983479
-Generic NetHunter arm64 full without su
+#Generic NetHunter arm64 full without su
 https://www.androidfilehost.com/?fid=11410932744536983517
 
-Generic NetHunter i386 minimal with su
+#Generic NetHunter i386 minimal with su
 https://www.androidfilehost.com/?fid=11410932744536983513
-Generic NetHunter i386 minimal without su
+#Generic NetHunter i386 minimal without su
 https://www.androidfilehost.com/?fid=11410932744536983512
-Generic NetHunter i386 full with su
+#Generic NetHunter i386 full with su
 https://www.androidfilehost.com/?fid=11410932744536983506
-Generic NetHunter i386 full without su
+#Generic NetHunter i386 full without su
 https://www.androidfilehost.com/?fid=11410932744536983497
 
-Generic NetHunter amd64 minimal with su
+#Generic NetHunter amd64 minimal with su
 https://www.androidfilehost.com/?fid=11410932744536983453
-Generic NetHunter amd64 minimal without su
+#Generic NetHunter amd64 minimal without su
 https://www.androidfilehost.com/?fid=11410932744536983441
-Generic NetHunter amd64 full with su
+#Generic NetHunter amd64 full with su
 https://www.androidfilehost.com/?fid=11410932744536983841
-Generic NetHunter amd64 full without su
+#Generic NetHunter amd64 full without su
 https://www.androidfilehost.com/?fid=11410932744536983540
